-KSpreadCell::setText is now KSpreadCell::setCellText to help grepping :),
and added bool updateDepends for the above

-Removed duplicate call to map->update in load, since completeLoading does it
-Fixed kspreadfunc_app by adding KSpreadFactory::dcopObject
-Removed some unused stuff (sig_updateCell etc.)
-KSpreadTable::emit_updateCell() is now KSpreadTable::updateCell() (doesn't emit)
-Some other renamings to help finding things (e.g. popup-menu slots).
-New kdebug area: 36002, for the cell dependency stuff, very verbose output.
Laurent, use kdebugdialog to turn it off so that it won't annoy you :)
-Added some missing m_pDoc->setModified( true ) (for insert/remove row/column)

-I get some strange "QPainter: Internal error; no available GC" when inserting a row...
They come from the regionInvalidated stuff and I got 507 levels of recursive calls in
the backtrace :(

-Added Format/Default (everything in the popupmenu should be in the menus too...)
-Fixed that default to precision = -1
-Fixed stupid bug in incPrecision (I think I'm responsible for that one :)

2000-05-23 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can put a comment into a cell
Be careful there are against a bug : when I try to reload comment
"\n" were replacing by space => anybody has an idea ?
icons (lo22-action-comment ,lo22-action-removecomment, lo22-insertcell,
lo22-action-remove cell) created by jp.martin <jpmartin@iroise.com> thanks

2000-05-24 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Correct bug when I reload comment, correction gived by simon Hausmann
thanks a lot

2000-05-27 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Bug fix in comment
-Add new icons (lo22-action-inserttable,lo22-action-cell_edit,
lo22-action-deletecell) made by jp.martin <jpmartin@iroise.com> thanks
(improved other icons)