@@ -575,3 +575,8 @@ thanks a lot
 -Add new icons (lo22-action-inserttable,lo22-action-cell_edit,
 lo22-action-deletecell) made by jp.martin <jpmartin@iroise.com> thanks
 (improved other icons)
+
+2000-05-30 -Montel laurent <montell@club-internet.fr>
+-----------------------------------------------------
+-Now in "special paste" you can put just comment
+-Add new icon "special paste" made by jp.martin <jpmartin@iroise.com> thanks
